--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "anhskohbo/no-captcha": "^3.0",
         "barryvdh/laravel-dompdf": "v0.8.1",
         "consoletvs/charts": "5.*",
         "doctrine/cache": "^1.8",
         "doctrine/dbal": "^2.8",
         "dompdf/dompdf": "v0.8.2",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
