--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "maddhatter/laravel-fullcalendar": "^1.3",
         "nikic/php-parser": "v3.1",
         "owen-it/laravel-auditing": "7.0",
+        "paypal/rest-api-sdk-php": "*",
         "php-coveralls/php-coveralls": "^2.1",
         "timetoogo/pinq": "3.4.1",
         "venturecraft/revisionable": "^1.28"
