--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/dbal": "^2.8",
         "dompdf/dompdf": "v0.8.2",
         "guzzlehttp/guzzle": "^6.3",
+        "jrm2k6/cloudder": "0.4.*",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
