--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
         "laravelista/lumen-vendor-publish": "^2.1",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "maddhatter/laravel-fullcalendar": "^1.3",
         "nikic/php-parser": "v3.1",
         "owen-it/laravel-auditing": "7.0",
